# Eggbot

./: .gitignore  .replit  Cheap.txt  INSTALL.md  PRIVACY.md  Procfile  README.md  bee.txt  convert.py  data.json  earth_roles.txt  egg.txt  eggbot-1.0.py  eggbot-indev.py  eggbot-release.py  eggbot.py  eggtriggers.txt  florida.txt  index.html  kiri.txt  mdbed.py  pyproject.toml  render.bat  requirements.txt  roles.json  secret economy things  secret pagination plans.txt  settings.py  setup.py  simp.txt  site.html  spice.txt  startup.py  stonks.json  stonksClean.json  uhoh.txt
cogs/commands/: debug.py  economy.py  egg recipes.txt  file management.py  file_management.py  files.py  fun.py  help.py  info.py  roles.py  settings.py  shutdown.py  utility.py
cogs/commands/gamiing/: DiscordX.py  fuck man.py  life.py  minmax-old.py  minmax.py  minmaxNewOld.py  minmaxOld.py  tictacdiscord.py  tictacterminal.py  tpayneAI_aGAIN.py  ttd2.py  ttdAI.py  tttAI.py
cogs/commands/tictacfolder/: DInput.py  DiscordX.py  minmax.py  tictacdiscord.py  tictacterminal.py  ttd2.py
cogs/listeners/: command exceptions.py  deleted_messages.py  exceptions.py  pagination.py  reactions.py
cogs/misc/: confirm.py  mdbed.py  save.py
cogs/misc/sample/: sample cog.py
docs/: index.html  invite.html  secret.html
sample/: sample extension.py
